--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "mongodb": "^6.8.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
-    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "pdfjs-dist": "^4.2.67",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
